kubernetes/apps/projet-etude-app-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet-etude-app-demo
  labels:
    app.kubernetes.io/name: projet-etude-app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: projet-etude-app-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: projet-etude-app-demo
    spec:
      containers:
        - name: app
          image: ghcr.io/waddenn/projet-etude-app-demo:main
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests: { cpu: 10m, memory: 16Mi }
            limits:   { memory: 64Mi }
          readinessProbe:
            httpGet: { path: /healthz, port: http }
          livenessProbe:
            httpGet: { path: /healthz, port: http }
